--- a/vue-sample/index.html
+++ b/vue-sample/index.html
@@ -7,6 +7,9 @@
     <title>Vite App</title>
   </head>
   <body>
+    <script>
+      var realChartLic = 'upVcPE+wPOkOR/egW8JuxkM/nBOseBrflwxYpzGZyYm9cY8amGDkiMnVeQKUHJDjW2y71jtk+wte7L7C4dZzvIeymrsuAK5ra6gyxX/hOXPQX/333q4sjQ==';
+    </script>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
