--- a/angular-sample/src/index.html
+++ b/angular-sample/src/index.html
@@ -8,6 +8,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <script>
+    var realChartLic = 'upVcPE+wPOkOR/egW8JuxkM/nBOseBrflwxYpzGZyYm9cY8amGDkiMnVeQKUHJDjW2y71jtk+wte7L7C4dZzvIeymrsuAK5ra6gyxX/hOXPQX/333q4sjQ==';
+  </script>
   <app-root></app-root>
 </body>
 </html>
