update chartVersion, add license

--- a/basic-sample/public/index.html
+++ b/basic-sample/public/index.html
@@ -21,9 +21,10 @@
         }
     </style>
     <link rel="stylesheet" href="./css/realchart-style.css">
-    <script src="./js/realchart/realchart.0.9.5.min.js"></script>
+    <script src="./js/realchart/realchart.0.9.29.min.js"></script>
     <script type="text/javascript" src="./index.js"></script>
     <script>
+        var realChartLic = 'upVcPE+wPOkOR/egW8JuxkM/nBOseBrflwxYpzGZyYm9cY8amGDkiMnVeQKUHJDjW2y71jtk+wte7L7C4dZzvLkgLldhEufVcJQVB3j0jxbQX/333q4sjQ==';
         window.addEventListener('DOMContentLoaded', function () {
             try {
                 init();
