--- a/basic-sample/public/index.html
+++ b/basic-sample/public/index.html
@@ -1,43 +1,36 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>RealTouch - Basic Sample</title>
-    <style>
-        html {
-            margin: 0px;
-        }
-        body {
-            margin: 20px 30px;
-        }
-        #realchart {
-            width: 850px;
-            height: 550px;
-            border: 1px solid lightgray;
-            margin-bottom: 20px;
-        }
-    </style>
-    <link rel="stylesheet" href="./css/realchart-style.css">
-    <script src="./js/realchart/realchart.0.9.29.min.js"></script>
-    <script type="text/javascript" src="./index.js"></script>
-    <script>
-        var realChartLic = 'upVcPE+wPOkOR/egW8JuxkM/nBOseBrflwxYpzGZyYm9cY8amGDkiMnVeQKUHJDjW2y71jtk+wte7L7C4dZzvLkgLldhEufVcJQVB3j0jxbQX/333q4sjQ==';
-        window.addEventListener('DOMContentLoaded', function () {
-            try {
-                init();
-            } catch (err) {
-                alert(err);
-                console.error(err);
-            }
-        });
-    </script>
-</head>
+  </head>
+  <body>
 
-<body>
-    <div id="realchart"></div>
-</body>
 
+    <ul>
+        <li><a href="./tutorial/annotation-shape.html">annotation-shape</a></li>
+        <li><a href="./tutorial/annotations-basic.html">annotations-basic</a></li>
+        <li><a href="./tutorial/annotations.html">annotations</a></li>
+        <li><a href="./tutorial/assets.html">assets</a></li>
+        <li><a href="./tutorial/axis.html">axis</a></li>
+        <li><a href="./tutorial/bar.html">bar</a></li>
+        <li><a href="./tutorial/gauge-bullet.html">gauge-bullet</a></li>
+        <li><a href="./tutorial/gauge-circle.html">gauge-circle</a></li>
+        <li><a href="./tutorial/gauge-group-circle.html">gauge-group-circle</a></li>
+        <li><a href="./tutorial/gauge-group-linear.html">gauge-group-linear</a></li>
+        <li><a href="./tutorial/gauge-linear-band.html">gauge-linear-band</a></li>
+        <li><a href="./tutorial/gauge-linear.html">gauge-linear</a></li>
+        <li><a href="./tutorial/getting-started.html">getting-started</a></li>
+        <li><a href="./tutorial/hello-world.html">hello-world</a></li>
+        <li><a href="./tutorial/legend.html">legend</a></li>
+        <li><a href="./tutorial/line-group.html">line-group</a></li>
+        <li><a href="./tutorial/line-multi.html">line-multi</a></li>
+        <li><a href="./tutorial/pie-basic.html">pie-basic</a></li>
+        <li><a href="./tutorial/pie-half.html">pie-half</a></li>
+        <li><a href="./tutorial/style-callback.html">style-callback</a></li>
+        <li><a href="./tutorial/title.html">title</a></li>
+      </ul>
+  </body>
 </html>
