update advances examples

--- a/basic-sample/public/index.html
+++ b/basic-sample/public/index.html
@@ -7,27 +7,48 @@
     <title>RealTouch - Basic Sample</title>
   </head>
   <body>
+    <h2>BASIC</h2>
     <ul>
-        <li><a href="./tutorial/hello-world.html">hello-world</a></li>
-        <li><a href="./tutorial/getting-started.html">getting-started</a></li>
-        <li><a href="./tutorial/annotation-shape.html">annotation-shape</a></li>
-        <li><a href="./tutorial/annotations-basic.html">annotations-basic</a></li>
-        <li><a href="./tutorial/annotations.html">annotations</a></li>
-        <li><a href="./tutorial/assets.html">assets</a></li>
-        <li><a href="./tutorial/axis.html">axis</a></li>
-        <li><a href="./tutorial/bar.html">bar</a></li>
-        <li><a href="./tutorial/gauge-bullet.html">gauge-bullet</a></li>
-        <li><a href="./tutorial/gauge-circle.html">gauge-circle</a></li>
-        <li><a href="./tutorial/gauge-group-circle.html">gauge-group-circle</a></li>
-        <li><a href="./tutorial/gauge-group-linear.html">gauge-group-linear</a></li>
-        <li><a href="./tutorial/gauge-linear-band.html">gauge-linear-band</a></li>
-        <li><a href="./tutorial/gauge-linear.html">gauge-linear</a></li>
-        <li><a href="./tutorial/legend.html">legend</a></li>
-        <li><a href="./tutorial/line-multi.html">line-multi</a></li>
-        <li><a href="./tutorial/pie-basic.html">pie-basic</a></li>
-        <li><a href="./tutorial/pie-half.html">pie-half</a></li>
-        <li><a href="./tutorial/style-callback.html">style-callback</a></li>
-        <li><a href="./tutorial/title.html">title</a></li>
-      </ul>
+      <li><a href="./tutorial/hello-world.html">hello-world</a></li>
+      <li><a href="./tutorial/getting-started.html">getting-started</a></li>
+      <li><a href="./tutorial/annotation-shape.html">annotation-shape</a></li>
+      <li><a href="./tutorial/annotations-basic.html">annotations-basic</a></li>
+      <li><a href="./tutorial/annotations.html">annotations</a></li>
+      <li><a href="./tutorial/assets.html">assets</a></li>
+      <li><a href="./tutorial/axis.html">axis</a></li>
+      <li><a href="./tutorial/bar.html">bar</a></li>
+      <li><a href="./tutorial/gauge-bullet.html">gauge-bullet</a></li>
+      <li><a href="./tutorial/gauge-circle.html">gauge-circle</a></li>
+
+      <li><a href="./tutorial/gauge-linear-band.html">gauge-linear-band</a></li>
+      <li><a href="./tutorial/gauge-linear.html">gauge-linear</a></li>
+      <li><a href="./tutorial/legend.html">legend</a></li>
+      <li><a href="./tutorial/line-multi.html">line-multi</a></li>
+      <li><a href="./tutorial/pie-basic.html">pie-basic</a></li>
+      <li><a href="./tutorial/pie-half.html">pie-half</a></li>
+      <li><a href="./tutorial/style-callback.html">style-callback</a></li>
+      <li><a href="./tutorial/title.html">title</a></li>
+    </ul>
+
+    <h2>ADVANCED</h2>
+    <ul>
+      <li><a href="./tutorial/annotation-shape-series.html">annotation-shape-series</a></li>
+      <li><a href="./tutorial/assets-gradient.html">assets-gradient</a></li>
+      <li><a href="./tutorial/axis-log.html">axis-log</a></li>
+      <li><a href="./tutorial/bar-group.html">bar-group</a></li>
+      <li><a href="./tutorial/bar-wing.html">bar-wing</a></li>
+      <li><a href="./tutorial/bubble.html">bubble</a></li>
+      <li><a href="./tutorial/candlestick.html">candlestick</a></li>
+      <li><a href="./tutorial/polar-baseball.html">polar-baseball</a></li>
+      <li><a href="./tutorial/polar.html">polar</a></li>
+      <li><a href="./tutorial/series-add-point.html">series-add-point</a></li>
+      <li><a href="./tutorial/split-wing.html">split-wing</a></li>
+      <li>
+        <a href="./tutorial/gauge-group-circle.html">gauge-group-circle</a>
+      </li>
+      <li>
+        <a href="./tutorial/gauge-group-linear.html">gauge-group-linear</a>
+      </li>
+    </ul>
   </body>
 </html>
