--- a/basic-sample/public/index.html
+++ b/basic-sample/public/index.html
@@ -35,7 +35,7 @@
       <li><a href="./tutorial/annotation-shape-series.html">annotation-shape-series</a></li>
       <li><a href="./tutorial/assets-gradient.html">assets-gradient</a></li>
       <li><a href="./tutorial/axis-log.html">axis-log</a></li>
-      <li><a href="./tutorial/bar-group.html">bar-group</a></li>
+      <li><a href="./tutorial/bargroup.html">bargroup</a></li>
       <li><a href="./tutorial/bar-wing.html">bar-wing</a></li>
       <li><a href="./tutorial/bubble.html">bubble</a></li>
       <li><a href="./tutorial/candlestick.html">candlestick</a></li>
