--- a/basic-sample/public/tutorial/bargroup.html
+++ b/basic-sample/public/tutorial/bargroup.html
@@ -30,7 +30,7 @@ body {
 <link href="../css/realchart-style.css" rel="stylesheet">
 <script type="text/javascript" src="../js/realchart-lic.js"></script>
 <script type="text/javascript" src="../js/realchart.min.js"></script>
-<script type="text/javascript" src="./bar-group.js"></script>
+<script type="text/javascript" src="./bargroup.js"></script>
 <script type="text/javascript">
 	window.addEventListener('DOMContentLoaded', function () {
 		try {
