--- a/gs-sample/public/index.html
+++ b/gs-sample/public/index.html
@@ -10,8 +10,50 @@
     </style>
   </head>
   <body>
+    <h2>데이터 시각화</h2>
     <ul>
-      <li><a href=""></a></li>
+      <li><a href="./tc-01.html">BAR</a></li>
+      <li><a href="./tc-02.html">LINE</a></li>
+      <li><a href="./tc-03.html">AREA</a></li>
+      <li><a href="./tc-04.html">BUBBLE</a></li>
+      <li><a href="./tc-05.html">SCATTER</a></li>
+      <li><a href="./tc-06.html">PIE</a></li>
+    </ul>
+
+    <h2>범례 (LEGEND)</h2>
+    <ul>
+      <li><a href="./tc-07.html">숨기기/표시</a></li>
+      <li><a href="./tc-08.html">배치</a></li>
+    </ul>
+
+    <h2>축 및 눈금</h2>
+    <ul>
+      <li><a href="./tc-09.html">축 레이블 및 단위</a></li>
+      <li><a href="./tc-10.html">눈금</a></li>
+    </ul>
+
+    <h2>툴팁 및 라벨</h2>
+    <ul>
+      <li><a href="./tc-11.html">툴팁</a></li>
+      <li><a href="./tc-12.html">라벨</a></li>
+    </ul>
+
+    <h2>색상 및 스타일</h2>
+    <ul>
+      <li><a href="./tc-13.html">색상 설정</a></li>
+      <li><a href="./tc-14.html">테마 및 팔레트</a></li>
+    </ul>
+
+    <h2>차트 제목</h2>
+    <ul>
+      <li><a href="./tc-15.html">제목 설정 및 배치</a></li>
+      <li><a href="./tc-16.html">스타일 및 색상</a></li>
+    </ul>
+
+    <h2>부제목</h2>
+    <ul>
+      <li><a href="./tc-15.html">부제목 설정 및 배치</a></li>
+      <li><a href="./tc-16.html">스타일 및 색상</a></li>
     </ul>
   </body>
 </html>
