--- a/gs-sample/public/tc-18.html
+++ b/gs-sample/public/tc-18.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>GS TC-03 | RealChart</title>
-    <link href="/common.css" rel="stylesheet">
+    <title>GS TC-18 | RealChart</title>
+    <link href="/common.css" rel="stylesheet" />
     <!-- RealChart 기본 CSS -->
-    <link href="./lib/realchart-style.css" rel="stylesheet">
+    <link href="./lib/realchart-style.css" rel="stylesheet" />
     <!-- RealChart 라이브러리 및 라이선스 -->
     <script type="text/javascript" src="./lib/realchart.min.js"></script>
     <script type="text/javascript" src="./lib/realchart-lic.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <!-- RealChart를 표현할 DOM -->
-    <div id="realchart"></div>
-    <script type="text/javascript" src="./tc-03.js"></script>
-</body>
+    <div style="display: flex; flex-direction: column">
+      <div id="realchart"></div>
+    </div>
+    <script type="text/javascript" src="./tc-18.js"></script>
+  </body>
 </html>
