--- a/angular-sample/src/index.html
+++ b/angular-sample/src/index.html
@@ -1,16 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>AngularSample</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <script>
-    var realChartLic = 'upVcPE+wPOkOR/egW8JuxkM/nBOseBrflwxYpzGZyYm9cY8amGDkiMnVeQKUHJDjW2y71jtk+wte7L7C4dZzvIeymrsuAK5ra6gyxX/hOXPQX/333q4sjQ==';
-  </script>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>AngularSample</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body>
+    <script>
+      var realChartLic =
+        "upVcPE+wPOkOR/egW8JuxkM/nBOseBrflwxYpzGZyYlnRyUuAXyLeK+VftULexn77B0PqgFuedJe7L7C4dZzvIWdu4ppFLmGVq5QaGN66f/QX/333q4sjQ==";
+    </script>
+    <app-root></app-root>
+  </body>
 </html>
