--- a/beginner-sample/public/index.html
+++ b/beginner-sample/public/index.html
@@ -28,7 +28,7 @@
 
     <h2>축 및 눈금</h2>
     <ul>
-      <li><a href="./tc-09.html">축 레이블 및 단위</a></li>
+      <li><a href="./tc-09.html">축 라벨 및 단위</a></li>
       <li><a href="./tc-10.html">눈금</a></li>
     </ul>
 
@@ -52,8 +52,8 @@
 
     <h2>부제목</h2>
     <ul>
-      <li><a href="./tc-15.html">부제목 설정 및 배치</a></li>
-      <li><a href="./tc-16.html">스타일 및 색상</a></li>
+      <li><a href="./tc-17.html">부제목 설정 및 배치</a></li>
+      <li><a href="./tc-18.html">스타일 및 색상</a></li>
     </ul>
   </body>
 </html>
