--- a/beginner-sample/public/tc-07.html
+++ b/beginner-sample/public/tc-07.html
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="./tc-07.js"></script>
     <script>
         const toggleLegend = () => {
-          chart.legend.set("visible", !chart.legend.get("visible"));
+          chart.legend.set("visible", !chart.legend.toggleOption("visible"));
         };
       </script>
   </body>
